# docentpro_ralphthon

./: .env  .env.example  .gitignore  CLAUDE.md  PRD.md  PROJECT.md  docker-compose.yml
backend/: Dockerfile  PROGRESS.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: schemas.py
backend/app/api/v1/endpoints/: calendar.py  compare.py  flights.py  hotels.py  search.py  weather.py
backend/app/core/: config.py
backend/app/services/: amadeus_service.py  liteapi_service.py  scoring_service.py  weather_service.py
docs/: api-spec.yaml  ralph-backend-prompt.md  ralph-frontend-prompt.md
docs/frontend/: frontend-spec-api-service-layer.md  frontend-spec-calendar-section.md  frontend-spec-compare-section.md  frontend-spec-comparison-queue.md  frontend-spec-comparison-view.md  frontend-spec-component-hierarchy.md  frontend-spec-component-signatures.md  frontend-spec-context-provider.md  frontend-spec-cross-reference-checklist.md  frontend-spec-destination-autocomplete.md  frontend-spec-display-components.md  frontend-spec-empty-states.md  frontend-spec-error-edge-cases.md  frontend-spec-form-components.md  frontend-spec-glossary.md  frontend-spec-hooks-and-context.md  frontend-spec-hotel-section.md  frontend-spec-progressive-reveal.md  frontend-spec-queue-edge-cases.md  frontend-spec-search-section.md  frontend-spec-section-reveal-ux.md  frontend-spec-tech-stack.md  frontend-spec-ui-states.md  frontend-spec-weather-calendar-indicators.md  frontend-spec.md
frontend/: Dockerfile  PROGRESS.md  next.config.ts  package-lock.json  package.json
(+53 files in other folders)
