[tool.poetry]
name = "trip-timing-ai"
version = "0.1.0"
description = "Trip Timing AI - find the best travel dates"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
httpx = ">=0.27.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.4.0"
black = ">=24.0"

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
